--- a/404.html
+++ b/404.html
@@ -101,180 +101,17 @@
       </div>
     </nav>
   </header>
-  <div class="position-relative">
-    <img class="d-none d-md-block w-100" src="Images\Equipment\equipment-header-desktop.jpg" alt="">
-    <img class="d-md-none d-block w-100" src="Images\Equipment\equipment-header-mobile.jpg" alt="">
-    <div class="position-absolute white-overlay"></div>
-    <div class="position-absolute overlay-text text-blue">
-      <div class="container-md">
-        <h1><span class="yellow-border">EQUIPMENT</span></h1>
+
+
+  <div class="container-md py-5">
+    <div class="row py-5">
+      <div class="col-md-10 mx-auto text-center">
+        <h1 class="text-404">404</h1>
+        <h2 class="text-light-grey font-weight-bold mb-3">PAGE NOT FOUND</h2>
+        <a class="btn btn-primary px-4 rounded-0 font-weight-bold" href="#" role="button">Home Page</a>
+        <img class="w-100 py-5" src="Images\404\404-image.png" alt="">
       </div>
     </div>
-  </div>
-
-  <div class="container-md">
-    <div class="pb-4 pb-md-5">
-      <div class="row justify-content-between">
-        <div class="px-0 px-md-3 col-md-5 col-lg-4  mt-3 pt-5">
-          <h2 class="text-center text-md-left text-blue"><span class="yellow-border-h2">CATEGORIES</span></h2>
-          <div class="mt-0 mt-md-5 bg-light-grey1 py-4 d-none d-md-block">
-            <ul class="nav flex-column sidebar-list">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Biopsy Foam Pads</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Cassettes – Biopsy</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Cassettes – Tissue</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Containers</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Microscope Slides</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Microtome Blades</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Mounting Media</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Paraffin</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Tissue Dyes</a>
-              </li>
-            </ul>
-          </div>
-          <div class="pt-4 d-block d-md-none sidebar">
-            <button type="button" class="btn btn-light w-100 position-relative" data-toggle="collapse" data-target="#collapseExample" aria-expanded="true" aria-controls="collapseExample">Click to Expand <span class="down-arrow"><svg
-                  aria-hidden="true" height="25" width="25" focusable="false" data-prefix="fas" data-icon="caret-down" class="svg-inline--fa fa-caret-down fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
-                  <path fill="currentColor" d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"></path>
-                </svg></span> </button>
-            <div class="collapse w-100" id="collapseExample">
-              <div class="mt-0 mt-md-5 bg-light-grey1 py-4 text-center">
-                <ul class="nav flex-column sidebar-list">
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Biopsy Foam Pads</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Cassettes – Biopsy</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Cassettes – Tissue</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Containers</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Microscope Slides</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Microtome Blades</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Mounting Media</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Paraffin</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Tissue Dyes</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-7 pt-5  mt-3 text-center text-md-left">
-          <h2 class="text-blue invisible d-none d-md-block"><span class="yellow-border-h2">CONSUMABLES</span></h2>
-          <div class="pt-0 pt-md-5">
-
-            <h4 class="font-weight-bolder text-blue">A&D FX-120I - 122g x 0.001g<br>Precision Balance</h4>
-            <div class="row no-gutters my-5">
-              <div class="col-10 col-md-5 mx-auto mx-md-1">
-                <img class="w-100" src="Images\Equipment\prod6.jpg" alt="">
-
-              </div>
-            </div>
-            <p>The A&D FX-120I is the best value, precision scale on the market. Featuring a
-              patented Compact Super Hybrid Sensor at its heart, providing fast, one-second
-              weighing response time. Fx-120i also contains a specially designed internal
-              shock absorber that offers protection from the adverse effects of vertical or
-              transverse overloading. Durable and reliable, the FX-120i is an entry level,
-              full-featured 0.01g to 1mg resolution balance at a very affordable price.</p>
-            <p>A&D offers a patented Compact Super Hybrid Sensor - the heart of the balance.
-              It allows the balance to provide fast, one-second response time with precise
-              readouts. It also contains a specially designed shock absorber, that offers
-              internal protection to the sensors which protects it from accidental overloading.</p>
-
-            <h4 class="font-weight-bold mt-5 mt-md-4">Features:</h4>
-
-            <ul class="text-left">
-              <li>External Calibration - 50g or 100g weight required to calibrate. (Not Included.)</li>
-              <li>Capacity: 122g</li>
-              <li>Readability: 0.001g</li>
-              <li>5 Year Warranty</li>
-            </ul>
-
-            <div class="row p-3 no-gutters light-grey-border mt-5 text-left">
-              <div class="col-5">
-                Capacity
-              </div>
-              <div class="col-7">
-                122g
-              </div>
-              <div class="col-5">
-                Capacity
-              </div>
-              <div class="col-7">
-                122g
-              </div>
-              <div class="col-5">
-                Applications
-              </div>
-              <div class="col-7">
-                Counting with Automatic Counting Accuracy
-                Improvement (ACAI), Percent, Animal weighing
-                with display hold, Statistical calculation
-                function, Comparator function with buzzer
-              </div>
-              <div class="col-5">
-                Capacity
-              </div>
-              <div class="col-7">
-                122g
-              </div>
-
-            </div>
-
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="container-md py-5 my-0 my-md-4">
-    <h2 class="text-blue text-center"><span class="yellow-border-h2">CONTACT</span> US</h1>
-      <form class="pt-5 mt-4">
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <label for="name">Your Name*</label>
-            <input type="text" class="form-control" id="name">
-          </div>
-          <div class="form-group col-md-6">
-            <label for="email">Your Email*</label>
-            <input type="email" class="form-control" id="email">
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="message">Your Message</label>
-          <textarea class="form-control" id="message" rows="4"></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary rounded-0 btn-block font-weight-bold">Contact</button>
-      </form>
   </div>
 
   <footer class="mt-3 mt-md-5 position-relative">
