--- a/consumables.html
+++ b/consumables.html
@@ -115,8 +115,8 @@
   <div class="container-md">
     <div class="pb-4 pb-md-5">
       <div class="row justify-content-between">
-        <div class="col-md-5 col-lg-4  mt-3 pt-5">
-          <h2 class="text-center text-blue"><span class="yellow-border-h2">CATEGORIES</span></h2>
+        <div class="px-0 px-md-3 col-md-5 col-lg-4  mt-3 pt-5">
+          <h2 class="text-center text-md-left text-blue"><span class="yellow-border-h2">CATEGORIES</span></h2>
           <div class="mt-0 mt-md-5 bg-light-grey1 py-4 d-none d-md-block">
             <ul class="nav flex-column sidebar-list">
               <li class="nav-item">
@@ -149,11 +149,11 @@
             </ul>
           </div>
           <div class="pt-4 d-block d-md-none sidebar">
-            <button type="button" class="btn btn-light vw-100 position-relative" data-toggle="collapse" data-target="#collapseExample" aria-expanded="true" aria-controls="collapseExample">Click to Expand <span class="down-arrow"><svg
+            <button type="button" class="btn btn-light w-100 position-relative" data-toggle="collapse" data-target="#collapseExample" aria-expanded="true" aria-controls="collapseExample">Click to Expand <span class="down-arrow"><svg
                   aria-hidden="true" height="25" width="25" focusable="false" data-prefix="fas" data-icon="caret-down" class="svg-inline--fa fa-caret-down fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
                   <path fill="currentColor" d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"></path>
                 </svg></span> </button>
-            <div class="collapse vw-100" id="collapseExample">
+            <div class="collapse w-100 " id="collapseExample">
               <div class="mt-0 mt-md-5 bg-light-grey1 py-4 text-center">
                 <ul class="nav flex-column sidebar-list">
                   <li class="nav-item">
@@ -207,7 +207,7 @@
               price so you can buy from a single source. Our on-time delivery will guarantee
               efficiency and cost savings for your laboratory</p>
 
-            <div class="row justify-content-between pr-0 pr-md-5 pt-3">
+            <div class="row no-gutters justify-content-between pr-0 pr-md-5 pt-3">
               <div class="col-lg-5 pt-3 pt-md-4 text-center">
                 <img class="w-100" src="Images\Consumables\cimage1.jpg" alt="">
                 <h6 class="pt-3">Heratherm™ General Protocol
