--- a/service.html
+++ b/service.html
@@ -102,12 +102,12 @@
     </nav>
   </header>
   <div class="position-relative">
-    <img class="d-none d-md-block w-100" src="Images\Equipment\equipment-header-desktop.jpg" alt="">
-    <img class="d-md-none d-block w-100" src="Images\Equipment\equipment-header-mobile.jpg" alt="">
+    <img class="d-none d-md-block w-100" src="Images\Service\service-header-desktop.jpg" alt="">
+    <img class="d-md-none d-block w-100" src="Images\Service\service-header-mobile.jpg" alt="">
     <div class="position-absolute white-overlay"></div>
     <div class="position-absolute overlay-text text-blue">
       <div class="container-md">
-        <h1><span class="yellow-border">EQUIPMENT</span></h1>
+        <h1><span class="yellow-border">SERVICE</span></h1>
       </div>
     </div>
   </div>
@@ -115,141 +115,110 @@
   <div class="container-md">
     <div class="pb-4 pb-md-5">
       <div class="row justify-content-between">
-        <div class="px-0 px-md-3 col-md-5 col-lg-4  mt-3 pt-5">
-          <h2 class="text-center text-md-left text-blue"><span class="yellow-border-h2">CATEGORIES</span></h2>
-          <div class="mt-0 mt-md-5 bg-light-grey1 py-4 d-none d-md-block">
-            <ul class="nav flex-column sidebar-list">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Biopsy Foam Pads</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Cassettes – Biopsy</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Cassettes – Tissue</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Containers</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Microscope Slides</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Microtome Blades</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Mounting Media</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Paraffin</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Tissue Dyes</a>
-              </li>
-            </ul>
-          </div>
-          <div class="pt-4 d-block d-md-none sidebar">
-            <button type="button" class="btn btn-light w-100 position-relative" data-toggle="collapse" data-target="#collapseExample" aria-expanded="true" aria-controls="collapseExample">Click to Expand <span class="down-arrow"><svg
-                  aria-hidden="true" height="25" width="25" focusable="false" data-prefix="fas" data-icon="caret-down" class="svg-inline--fa fa-caret-down fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
-                  <path fill="currentColor" d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"></path>
-                </svg></span> </button>
-            <div class="collapse w-100" id="collapseExample">
-              <div class="mt-0 mt-md-5 bg-light-grey1 py-4 text-center">
-                <ul class="nav flex-column sidebar-list">
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Biopsy Foam Pads</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Cassettes – Biopsy</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Cassettes – Tissue</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Containers</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Microscope Slides</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Microtome Blades</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Mounting Media</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Paraffin</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Tissue Dyes</a>
-                  </li>
-                </ul>
+        <div class="col-md-5 col-lg-4  mt-3 pt-5 order-2 order-md-1">
+          <h2 class="text-center text-md-left text-blue"><span class="yellow-border-h2">REQUEST</span></h2>
+          <div class="mt-5 bg-light-grey1 p-4">
+            <h4 class="font-weight-bold text-blue">Request Service</h4>
+            <form class="mt-4">
+              <div class="form-group ">
+                <label for="fname">First Name*</label>
+                <input type="text" class="form-control" id="fname">
               </div>
-            </div>
+              <div class="form-group ">
+                <label for="lname">Last Name*</label>
+                <input type="text" class="form-control" id="lname">
+              </div>
+              <div class="form-group ">
+                <label for="org">Organization*</label>
+                <input type="text" class="form-control" id="org">
+              </div>
+              <div class="form-group ">
+                <label for="dept">Department*</label>
+                <input type="text" class="form-control" id="dept">
+              </div>
+              <div class="form-group">
+                <label for="email">Email*</label>
+                <input type="email" class="form-control" id="email">
+              </div>
+              <div class="form-group ">
+                <label for="phone">Phone*</label>
+                <input type="text" class="form-control" id="phone">
+              </div>
+              <div class="form-group">
+                <label for="service">Service Type</label>
+                <select class="form-control" id="service">
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                </select>
+              </div>
+              <div class="form-group ">
+                <label for="model">Model</label>
+                <input type="text" class="form-control" id="model">
+              </div>
+              <div class="form-group ">
+                <label for="serial">Serial Number</label>
+                <input type="text" class="form-control" id="serial">
+              </div>
+              <div class="form-group">
+                <label for="message">Inquiry</label>
+                <textarea class="form-control" id="message" rows="4"></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary rounded-0 btn-block font-weight-bold">Contact</button>
+            </form>
           </div>
         </div>
-        <div class="col-md-7 pt-5  mt-3 text-center text-md-left">
-          <h2 class="text-blue invisible d-none d-md-block"><span class="yellow-border-h2">CONSUMABLES</span></h2>
-          <div class="pt-0 pt-md-5">
-
-            <h4 class="font-weight-bolder text-blue">A&D FX-120I - 122g x 0.001g<br>Precision Balance</h4>
-            <div class="row no-gutters my-5">
-              <div class="col-10 col-md-5 mx-auto mx-md-1">
-                <img class="w-100" src="Images\Equipment\prod6.jpg" alt="">
-
-              </div>
-            </div>
-            <p>The A&D FX-120I is the best value, precision scale on the market. Featuring a
-              patented Compact Super Hybrid Sensor at its heart, providing fast, one-second
-              weighing response time. Fx-120i also contains a specially designed internal
-              shock absorber that offers protection from the adverse effects of vertical or
-              transverse overloading. Durable and reliable, the FX-120i is an entry level,
-              full-featured 0.01g to 1mg resolution balance at a very affordable price.</p>
-            <p>A&D offers a patented Compact Super Hybrid Sensor - the heart of the balance.
-              It allows the balance to provide fast, one-second response time with precise
-              readouts. It also contains a specially designed shock absorber, that offers
-              internal protection to the sensors which protects it from accidental overloading.</p>
-
-            <h4 class="font-weight-bold mt-5 mt-md-4">Features:</h4>
-
-            <ul class="text-left">
-              <li>External Calibration - 50g or 100g weight required to calibrate. (Not Included.)</li>
-              <li>Capacity: 122g</li>
-              <li>Readability: 0.001g</li>
-              <li>5 Year Warranty</li>
+        <div class="col-md-7 pt-5  mt-3 text-center text-md-left order-1 order-md-2">
+          <h2 class="text-blue"><span class="yellow-border-h2">SERVICE</span></h2>
+          <div class="pt-5">
+            <h4 class="font-weight-bold">About Our Service</h4>
+            <p>IDEAL SCIENTIFIC has extensive experience in the Histology Laboratory
+              and also provides service to General Laboratory equipment.</p>
+            <p>Service to Clinical, Research, Pharma and Educational Laboratories. We
+              service most brands and models of equipment and maintain a large stock of
+              parts.</p>
+            <h4 class="font-weight-bold mt-5">Ideal Scientific Provides:</h4>
+            <ul class="text-left check">
+              <li>Emergency Service</li>
+              <li>Scheduled Preventive Maintenance</li>
+              <li>Calibration</li>
+              <li>Service Contracts. Three Contract levels are available to meet
+                your service needs and budget.</li>
+              <li>Equipment Rebuilding</li>
+              <li>Repairs, mechanical, electronic, refrigeration</li>
             </ul>
 
-            <div class="row p-3 no-gutters light-grey-border mt-5 text-left">
-              <div class="col-5">
-                Capacity
+            <h4 class="font-weight-bold mt-5">Our Certification</h4>
+            <div class="row align-items-center justify-content-center">
+              <div class="col-5 col-sm-4 col-md-3">
+                <img class="w-100" src="Images\Service\ISO-9001.jpg" alt="">
               </div>
-              <div class="col-7">
-                122g
+              <div class="col-md-9">
+                <div class="mb-2">
+                  We have provided prompt professional service since
+                  1990 and are Certified to ISO 9001:2015
+                </div>
+                <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
               </div>
-              <div class="col-5">
-                Capacity
+            </div>
+
+            <div class="row no-gutters justify-content-between pt-3">
+              <div class="col-lg-5 pt-5 text-center">
+                <img class="w-100" src="Images\Consumables\cimage1.jpg" alt="">
+                <h6 class="pt-3">Heratherm™ General Protocol
+                  Microbiological Incubator</h6>
+                <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
               </div>
-              <div class="col-7">
-                122g
-              </div>
-              <div class="col-5">
-                Applications
-              </div>
-              <div class="col-7">
-                Counting with Automatic Counting Accuracy
-                Improvement (ACAI), Percent, Animal weighing
-                with display hold, Statistical calculation
-                function, Comparator function with buzzer
-              </div>
-              <div class="col-5">
-                Capacity
-              </div>
-              <div class="col-7">
-                122g
+              <div class="col-lg-5 pt-5 text-center">
+                <img class="w-100" src="Images\Consumables\cimage1.jpg" alt="">
+                <h6 class="pt-3">Heratherm™ General Protocol
+                  Microbiological Incubator</h6>
+                <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
               </div>
 
             </div>
-
           </div>
         </div>
       </div>
